# live-portfolio

./: .gitignore  Dockerfile  README.MD  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
core/: .env  settings.py  urls.py
portfolio/: admin.py  models.py  sitemaps.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_auto_20210413_1946.py  0003_alter_project_long_description.py  0004_alter_project_screenshot.py
portfolio/templates/portfolio/: 404.html  base.html  detail.html  home.html
static/css/: base.css  color.css  detail.css
staticfiles/: staticfiles.json
staticfiles/css/: base.14a36195f2d9.css  base.1b726f65cd7b.css  base.23e0750f550b.css  base.5293fb04b991.css  base.554c87a912cd.css  base.6f4994b1519b.css  base.a31448739350.css  base.css  base.d3312bddc3b5.css  base.f8d325c9185f.css  color.31f6d227ee0d.css  color.44e41e9ce2c9.css  color.60b5f138fa45.css  color.e97266f12716.css  color.f1329b3d272b.css  detail.css
