[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Seth Mcfeeters <seth.mcfeeters@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-environ = "^0.4.5"
Pillow = "^8.2.0"
whitenoise = "^5.2.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.8.6"
django-ckeditor = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
